new configure
