# src/docs/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Micro Notification API - Mirantes Technologic",
+    "title": "Micro Notification API - Mirantes Technologies",
     "description": "Microsservice Notification API, documentation for developers",
     "version": "1.0.1",
     "contact": {
@@ -9,105 +9,6 @@
     }
   },
   "paths": {
-    "/v1/notifications": {
-      "post": {
-        "tags": [
-          "Notification"
-        ],
-        "summary": "Create notification",
-        "description": "Create notification",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "recipientId": {
-                    "required": true,
-                    "type": "string",
-                    "example": "1b327ed1-a2bc-4cce-9d37-38a8964ce0ed"
-                  },
-                  "title": {
-                    "required": true,
-                    "type": "string",
-                    "example": "some title"
-                  },
-                  "content": {
-                    "required": true,
-                    "type": "string",
-                    "example": "some content"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Created",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "data": {
-                      "type": "object",
-                      "properties": {
-                        "recipientId": {
-                          "type": "uuid",
-                          "example": "98559c82-71d9-42fc-81fc-30b404d571c8"
-                        },
-                        "title": {
-                          "type": "string",
-                          "example": "some title"
-                        },
-                        "content": {
-                          "type": "string",
-                          "example": "some content"
-                        },
-                        "createdAt": {
-                          "type": "date",
-                          "example": "2024-02-19T10:46:26.694Z"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "errors": {
-                      "type": "object",
-                      "properties": {
-                        "recipientId": {
-                          "type": "string",
-                          "example": "recipientId is a required field"
-                        },
-                        "title": {
-                          "type": "string",
-                          "example": "title is a required field"
-                        },
-                        "content": {
-                          "type": "string",
-                          "example": "content is a required field"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/v1/notifications/{recipientId}": {
       "get": {
         "tags": [
